parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> eq_field
Rule 1     eq_field -> LBRACE EQ expression RBRACE
Rule 2     expression -> expression expression
Rule 3     expression -> CMD_FRACTION LPAREN expression COMMA expression RPAREN
Rule 4     expression -> CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
Rule 5     expression -> IDENTIFIER
Rule 6     expression -> NUMBER
Rule 7     expression -> CMD_RADICAL LPAREN expression COMMA expression RPAREN
Rule 8     expression -> CMD_RADICAL LPAREN expression RPAREN
Rule 9     expression -> CMD_SUP LPAREN expression RPAREN
Rule 10    expression -> CMD_SUB LPAREN expression RPAREN
Rule 11    expression -> CMD_ALIGN_INC LPAREN expression RPAREN
Rule 12    expression -> CMD_ALIGN_DEC LPAREN expression RPAREN
Rule 13    expression -> CMD_BRACKET LPAREN expression RPAREN
Rule 14    expression -> CMD_BRACKET bracket_options LPAREN expression RPAREN
Rule 15    bracket_options -> BRACKET_OPTION
Rule 16    bracket_options -> bracket_options BRACKET_OPTION
Rule 17    expression -> CMD_DISPLACE LPAREN RPAREN
Rule 18    expression -> CMD_DISPLACE LPAREN expression RPAREN
Rule 19    expression -> CMD_DISPLACE displace_options LPAREN RPAREN
Rule 20    expression -> CMD_DISPLACE displace_options LPAREN expression RPAREN
Rule 21    displace_options -> DISPLACE_OPTION
Rule 22    displace_options -> displace_options DISPLACE_OPTION
Rule 23    expression -> TEXT
Rule 24    expression -> OPERATOR

Terminals, with rules where they appear

BRACKET_OPTION       : 15 16
CMD_ALIGN_DEC        : 12
CMD_ALIGN_INC        : 11
CMD_BRACKET          : 13 14
CMD_DISPLACE         : 17 18 19 20
CMD_FRACTION         : 3 4
CMD_RADICAL          : 7 8
CMD_SUB              : 10
CMD_SUP              : 9
COMMA                : 3 7
DISPLACE_OPTION      : 21 22
EQ                   : 1
IDENTIFIER           : 5
LBRACE               : 1
LPAREN               : 3 4 7 8 9 10 11 12 13 14 17 18 19 20
NUMBER               : 6
OPERATOR             : 24
RBRACE               : 1
RPAREN               : 3 4 7 8 9 10 11 12 13 14 17 18 19 20
SEMICOLON            : 4
TEXT                 : 23
error                : 

Nonterminals, with rules where they appear

bracket_options      : 14 16
displace_options     : 19 20 22
eq_field             : 0
expression           : 1 2 2 3 3 4 4 7 7 8 9 10 11 12 13 14 18 20

Parsing method: LALR

state 0

    (0) S' -> . eq_field
    (1) eq_field -> . LBRACE EQ expression RBRACE

    LBRACE          shift and go to state 2

    eq_field                       shift and go to state 1

state 1

    (0) S' -> eq_field .



state 2

    (1) eq_field -> LBRACE . EQ expression RBRACE

    EQ              shift and go to state 3


state 3

    (1) eq_field -> LBRACE EQ . expression RBRACE
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 4

state 4

    (1) eq_field -> LBRACE EQ expression . RBRACE
    (2) expression -> expression . expression
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    RBRACE          shift and go to state 18
    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 17

state 5

    (3) expression -> CMD_FRACTION . LPAREN expression COMMA expression RPAREN
    (4) expression -> CMD_FRACTION . LPAREN expression SEMICOLON expression RPAREN

    LPAREN          shift and go to state 19


state 6

    (5) expression -> IDENTIFIER .

    RBRACE          reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_FRACTION    reduce using rule 5 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 5 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_RADICAL     reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_SUP         reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_SUB         reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_ALIGN_INC   reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_ALIGN_DEC   reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_BRACKET     reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_DISPLACE    reduce using rule 5 (expression -> IDENTIFIER .)
    TEXT            reduce using rule 5 (expression -> IDENTIFIER .)
    OPERATOR        reduce using rule 5 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 5 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 5 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 5 (expression -> IDENTIFIER .)


state 7

    (6) expression -> NUMBER .

    RBRACE          reduce using rule 6 (expression -> NUMBER .)
    CMD_FRACTION    reduce using rule 6 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 6 (expression -> NUMBER .)
    NUMBER          reduce using rule 6 (expression -> NUMBER .)
    CMD_RADICAL     reduce using rule 6 (expression -> NUMBER .)
    CMD_SUP         reduce using rule 6 (expression -> NUMBER .)
    CMD_SUB         reduce using rule 6 (expression -> NUMBER .)
    CMD_ALIGN_INC   reduce using rule 6 (expression -> NUMBER .)
    CMD_ALIGN_DEC   reduce using rule 6 (expression -> NUMBER .)
    CMD_BRACKET     reduce using rule 6 (expression -> NUMBER .)
    CMD_DISPLACE    reduce using rule 6 (expression -> NUMBER .)
    TEXT            reduce using rule 6 (expression -> NUMBER .)
    OPERATOR        reduce using rule 6 (expression -> NUMBER .)
    COMMA           reduce using rule 6 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 6 (expression -> NUMBER .)
    RPAREN          reduce using rule 6 (expression -> NUMBER .)


state 8

    (7) expression -> CMD_RADICAL . LPAREN expression COMMA expression RPAREN
    (8) expression -> CMD_RADICAL . LPAREN expression RPAREN

    LPAREN          shift and go to state 20


state 9

    (9) expression -> CMD_SUP . LPAREN expression RPAREN

    LPAREN          shift and go to state 21


state 10

    (10) expression -> CMD_SUB . LPAREN expression RPAREN

    LPAREN          shift and go to state 22


state 11

    (11) expression -> CMD_ALIGN_INC . LPAREN expression RPAREN

    LPAREN          shift and go to state 23


state 12

    (12) expression -> CMD_ALIGN_DEC . LPAREN expression RPAREN

    LPAREN          shift and go to state 24


state 13

    (13) expression -> CMD_BRACKET . LPAREN expression RPAREN
    (14) expression -> CMD_BRACKET . bracket_options LPAREN expression RPAREN
    (15) bracket_options -> . BRACKET_OPTION
    (16) bracket_options -> . bracket_options BRACKET_OPTION

    LPAREN          shift and go to state 25
    BRACKET_OPTION  shift and go to state 27

    bracket_options                shift and go to state 26

state 14

    (17) expression -> CMD_DISPLACE . LPAREN RPAREN
    (18) expression -> CMD_DISPLACE . LPAREN expression RPAREN
    (19) expression -> CMD_DISPLACE . displace_options LPAREN RPAREN
    (20) expression -> CMD_DISPLACE . displace_options LPAREN expression RPAREN
    (21) displace_options -> . DISPLACE_OPTION
    (22) displace_options -> . displace_options DISPLACE_OPTION

    LPAREN          shift and go to state 28
    DISPLACE_OPTION shift and go to state 30

    displace_options               shift and go to state 29

state 15

    (23) expression -> TEXT .

    RBRACE          reduce using rule 23 (expression -> TEXT .)
    CMD_FRACTION    reduce using rule 23 (expression -> TEXT .)
    IDENTIFIER      reduce using rule 23 (expression -> TEXT .)
    NUMBER          reduce using rule 23 (expression -> TEXT .)
    CMD_RADICAL     reduce using rule 23 (expression -> TEXT .)
    CMD_SUP         reduce using rule 23 (expression -> TEXT .)
    CMD_SUB         reduce using rule 23 (expression -> TEXT .)
    CMD_ALIGN_INC   reduce using rule 23 (expression -> TEXT .)
    CMD_ALIGN_DEC   reduce using rule 23 (expression -> TEXT .)
    CMD_BRACKET     reduce using rule 23 (expression -> TEXT .)
    CMD_DISPLACE    reduce using rule 23 (expression -> TEXT .)
    TEXT            reduce using rule 23 (expression -> TEXT .)
    OPERATOR        reduce using rule 23 (expression -> TEXT .)
    COMMA           reduce using rule 23 (expression -> TEXT .)
    SEMICOLON       reduce using rule 23 (expression -> TEXT .)
    RPAREN          reduce using rule 23 (expression -> TEXT .)


state 16

    (24) expression -> OPERATOR .

    RBRACE          reduce using rule 24 (expression -> OPERATOR .)
    CMD_FRACTION    reduce using rule 24 (expression -> OPERATOR .)
    IDENTIFIER      reduce using rule 24 (expression -> OPERATOR .)
    NUMBER          reduce using rule 24 (expression -> OPERATOR .)
    CMD_RADICAL     reduce using rule 24 (expression -> OPERATOR .)
    CMD_SUP         reduce using rule 24 (expression -> OPERATOR .)
    CMD_SUB         reduce using rule 24 (expression -> OPERATOR .)
    CMD_ALIGN_INC   reduce using rule 24 (expression -> OPERATOR .)
    CMD_ALIGN_DEC   reduce using rule 24 (expression -> OPERATOR .)
    CMD_BRACKET     reduce using rule 24 (expression -> OPERATOR .)
    CMD_DISPLACE    reduce using rule 24 (expression -> OPERATOR .)
    TEXT            reduce using rule 24 (expression -> OPERATOR .)
    OPERATOR        reduce using rule 24 (expression -> OPERATOR .)
    COMMA           reduce using rule 24 (expression -> OPERATOR .)
    SEMICOLON       reduce using rule 24 (expression -> OPERATOR .)
    RPAREN          reduce using rule 24 (expression -> OPERATOR .)


state 17

    (2) expression -> expression expression .
    (2) expression -> expression . expression
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

  ! shift/reduce conflict for CMD_FRACTION resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for CMD_RADICAL resolved as shift
  ! shift/reduce conflict for CMD_SUP resolved as shift
  ! shift/reduce conflict for CMD_SUB resolved as shift
  ! shift/reduce conflict for CMD_ALIGN_INC resolved as shift
  ! shift/reduce conflict for CMD_ALIGN_DEC resolved as shift
  ! shift/reduce conflict for CMD_BRACKET resolved as shift
  ! shift/reduce conflict for CMD_DISPLACE resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for OPERATOR resolved as shift
    RBRACE          reduce using rule 2 (expression -> expression expression .)
    COMMA           reduce using rule 2 (expression -> expression expression .)
    SEMICOLON       reduce using rule 2 (expression -> expression expression .)
    RPAREN          reduce using rule 2 (expression -> expression expression .)
    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

  ! CMD_FRACTION    [ reduce using rule 2 (expression -> expression expression .) ]
  ! IDENTIFIER      [ reduce using rule 2 (expression -> expression expression .) ]
  ! NUMBER          [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_RADICAL     [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_SUP         [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_SUB         [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_ALIGN_INC   [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_ALIGN_DEC   [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_BRACKET     [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_DISPLACE    [ reduce using rule 2 (expression -> expression expression .) ]
  ! TEXT            [ reduce using rule 2 (expression -> expression expression .) ]
  ! OPERATOR        [ reduce using rule 2 (expression -> expression expression .) ]

    expression                     shift and go to state 17

state 18

    (1) eq_field -> LBRACE EQ expression RBRACE .

    $end            reduce using rule 1 (eq_field -> LBRACE EQ expression RBRACE .)


state 19

    (3) expression -> CMD_FRACTION LPAREN . expression COMMA expression RPAREN
    (4) expression -> CMD_FRACTION LPAREN . expression SEMICOLON expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 31

state 20

    (7) expression -> CMD_RADICAL LPAREN . expression COMMA expression RPAREN
    (8) expression -> CMD_RADICAL LPAREN . expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 32

state 21

    (9) expression -> CMD_SUP LPAREN . expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 33

state 22

    (10) expression -> CMD_SUB LPAREN . expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 34

state 23

    (11) expression -> CMD_ALIGN_INC LPAREN . expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . TEXT
    (24) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    TEXT            shift and go to state 15
    OPERATOR        shift and go to state 16

    expression                     shift and go to state 35

state 24
